# cua-kit

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.ps1  build.sh
.cargo/: config.toml
cua-bof-common/: Cargo.toml
cua-bof-common/src/: alloc.rs  heap.rs  intrinsics.rs  lib.rs
cua-enum/: Cargo.toml  DOCS.md  README.md  cua-enum.cna
cua-enum/src/: beacon.rs  enumeration.rs  lib.rs  main.rs  output.rs  platform.rs
cua-enum/src/agents/: agents_md.rs  claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs
cua-enum/src/bof/: beacon.rs  enumeration.rs  fs.rs  mod.rs  winapi.rs
cua-enum/tests/mock_configs/: AGENTS.md
cua-enum/tests/mock_configs/claude/: CLAUDE.md  mcp.json  settings.json
cua-enum/tests/mock_configs/codex/: AGENTS.md  config.toml
cua-enum/tests/mock_configs/cursor/: environment.json
cua-enum/tests/mock_configs/cursor/rules/: security.txt
cua-enum/tests/mock_configs/gemini/: settings.json
cua-exec/: Cargo.toml  README.md  cua-exec.cna  setup.ps1
cua-exec/src/: api.rs  execution.rs  lib.rs  main.rs
cua-exec/src/bof/: beacon.rs  mod.rs  process.rs  winapi.rs
cua-poison/: Cargo.toml  cua-poison.cna
cua-poison/src/: lib.rs  main.rs  platform.rs  stealth.rs
cua-poison/src/bof/: beacon.rs  mod.rs  poison.rs  winapi.rs
cua-poison/src/sessions/: claude.rs  mod.rs
docs/: README.md  building.md  cobalt-strike.md  usage.md
