[package]
name = "cua-enum"
version = "0.1.0"
edition = "2024"
description = "Computer Use Agent Enumeration BOF - Enumerates AI/LLM agent configurations"

[lib]
name = "cua_enum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "cua-enum"
path = "src/main.rs"

[features]
default = ["exe"]
exe = []
bof = ["dep:cua-bof-common"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
cua-bof-common = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
]}
