[package]
name = "cua-exec"
version = "0.1.0"
edition = "2024"
description = "Computer Use Agent Execution BOF - Execute Claude commands"

[lib]
name = "cua_exec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "cua-exec"
path = "src/main.rs"

[features]
default = ["exe"]
exe = []
bof = ["dep:cua-bof-common"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
cua-bof-common = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Storage_FileSystem",
]}
